--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,13 @@
         "autofetch",
         "basenames",
         "batteryreport",
+        "bcompauth",
+        "bdmarc",
         "Bggr",
         "bmwh",
         "broobe",
         "catroot",
+        "CGNAT",
         "computerinfo",
         "computersys",
         "COPYALL",
@@ -26,6 +29,8 @@
         "Damit",
         "ddadmin",
         "dism",
+        "dmarc",
+        "DMARC",
         "DMTF",
         "Dnscache",
         "dnut",
@@ -38,6 +43,7 @@
         "ENDCODE",
         "endswith",
         "esbenp",
+        "ETHE",
         "evtx",
         "ewma",
         "exonline",
@@ -115,6 +121,7 @@
         "SLMGR",
         "SMBIOSBIOS",
         "SMTO",
+        "softfail",
         "sonali",
         "splwow",
         "startswith",
